<resources>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="app_name">Asteroides</string>
    <string name="action_settings">Configuración</string>
</resources>