<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/degradado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".presentacion.MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/tituloAplicacion"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/jugar"
        style="@style/EstiloBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arrancar"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/preferencias"
        style="@style/EstiloBoton.Alternativo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/acercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acercade"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/puntuaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Puntuaciones"
        app:cornerRadius="5dp" />

</LinearLayout>